[gd_scene load_steps=3 format=3 uid="uid://drx4kn3m7qhbl"]

[ext_resource type="Script" path="res://scripts/ui/twitch_config_menu.gd" id="1_script"]
[ext_resource type="Theme" uid="uid://c44ft8lc2mlpo" path="res://assets/styles/confirmation_dialog_theme.tres" id="2_theme"]

[node name="TwitchConfigMenu" type="Control"]
theme = ExtResource("2_theme")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HeaderHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HeaderHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Twitch Integration"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HeaderHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "X"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="EnableHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="EnableLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/EnableHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Enable Viewer Names:"

[node name="EnableCheckbox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/EnableHBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="ChannelHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ChannelLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ChannelHBox"]
layout_mode = 2
text = "Channel:"

[node name="ChannelInput" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/ChannelHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "your_channel_name"

[node name="ConnectionHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ConnectionLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ConnectionHBox"]
layout_mode = 2
text = "Connection:"

[node name="ConnectionIndicator" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ConnectionHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Disabled"
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ViewersLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Collected Viewer Names:"

[node name="ViewerList" type="ItemList" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="ListButtonsHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ClearAllButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ListButtonsHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Clear All"

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StatusHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StatusTitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/StatusHBox"]
layout_mode = 2
text = "Status:"

[node name="StatusLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/StatusHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Disabled"
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)

[node name="CountHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CountTitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/CountHBox"]
layout_mode = 2
text = "Viewers in pool:"

[node name="ViewerCountLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/CountHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
theme_override_colors/font_color = Color(0.4, 0.8, 0.4, 1)

[node name="InfoLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Viewer names are automatically collected
from chat and used on potato passports!"
horizontal_alignment = 1
autowrap_mode = 2
